# rws-music

./: .dockerignore  .env.example  .gitignore  .kilo-config.json  .prefectignore  .sqlfluff  Dockerfile  GRANULAR_ETL_IMPLEMENTATION_PLAN.md  METABASE_MIGRATION_GUIDE.md  N8N_OPERATIONS.md  PREFECT_TO_N8N_MIGRATION_PLAN.md  README.md  REFACTORING_PLAN.md  SYNOLOGY_DEPLOYMENT_GUIDE.md  activate-dev.ps1  check_node_types.py  diagnose_runner.sh  docker-compose.yml  metabase.Dockerfile  n8n-task-runners.json  n8n.Dockerfile  pyproject.toml  report_definitions.md  requirements.txt  runners.Dockerfile  rws-music.code-workspace  streamlit.Dockerfile  task-runners.Dockerfile
.kilocode/rules/: rws-music-rules.md
.streamlit/: config.toml
dbt/: .user.yml  dbt_project.yml  profiles.yml  requirements.txt
dbt/seeds/: integers.csv  mask_artists.csv  unmapped_areas.csv
dbt_duckdb/: dbt_project.yml  package-lock.yml
dbt_duckdb/macros/: check_column_consistency.sql
docs/: COST_ANALYSIS.md  DEPLOYMENT_GUIDE.md  QUICK_START.md
extract_load/: backup.sh  restore.sh
metabase/: dashboard_cards.json  dashboards.json  fields.json  questions.json  tables.json
n8n-workflows/: Daily ETL.json  Geography Base Enrichment.json  Geography Coordinate Enrichment.json  MBZ Artist Discovery.json  MBZ Artist Enrichment.json  MBZ Data Parsing.json  MBZ Hierarchy Processing.json  README.md  Spotify Album Enrichment.json  Spotify Artist Enrichment.json  Spotify Ingestion.json  Track Ingestion.json  daily_etl.json  spotify_ingestion.json
scripts/: run_pipeline.py
streamlit/: __init__.py  app.py  config.py
terraform/: README.md
(+165 files in other folders)
