[project]
name = "rws-music"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dbt-core==1.10.10",
    "dbt-duckdb==1.10.0",
    "duckdb==1.4.3",
    "httpx==0.27.0",
    "musicbrainzngs==0.7.1",
    "polars==1.9.0",
    "pyarrow>=21.0.0",
    "pycountry>=24.6.1",
    "pycountry-convert>=0.7.2",
    "python-dateutil==2.9.0",
    "python-dotenv==1.0.0",
    "requests==2.32.5",
    "rich==13.7.0",
    "sentry-sdk>=2.48.0",
    "structlog==24.1.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "black>=25.1.0",
    "sqlfluff>=3.4.2",
]

test = [
    "pytest==8.3.0",
    "pytest-asyncio==0.23.0",
]